feature: Surrender implementation
